Fix clickable elements too close together - footer links

--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -25,7 +25,7 @@
     color: $color--white;
 		font-family: $primary-font;
 		font-size: 12px;
-		line-height: 20px;
+		line-height: 28px;
 		opacity: .4;
 		font-weight: 300;
     &-temp {
@@ -187,6 +187,9 @@
     &__logo-img {
       width: 125px;
       height: auto;
+    }
+    &__link {
+  		line-height: 32px;
     }
   }
 }
